// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should apply a number display function: number display function result 1`] = `
t {
  "_value": 11,
}
`;

exports[`Helpers should expose a window object: limited window object 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_LINK_PREFIX": "",
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISABLED_TOOLBAR_GROUP_VARIANT": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2023/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "memo": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "numberDisplay": [Function],
  "objFreeze": [Function],
  "setImmutableData": [Function],
}
`;

exports[`Helpers should expose a window object: window object 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_LINK_PREFIX": "",
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISABLED_TOOLBAR_GROUP_VARIANT": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2023/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "memo": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "numberDisplay": [Function],
  "objFreeze": [Function],
  "setImmutableData": [Function],
}
`;

exports[`Helpers should handle use aggregate error, or fallback: emulated aggregate error 1`] = `
{
  "aggregated": [AggregateError: testing aggregated],
  "errors": [
    [Error: lorem ipsum],
    [Error: dolor sit],
  ],
  "isEmulated": true,
  "name": "AggregateError",
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_LINK_PREFIX": "",
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISABLED_TOOLBAR_GROUP_VARIANT": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2023/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "memo": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "numberDisplay": [Function],
  "objFreeze": [Function],
  "setImmutableData": [Function],
}
`;

exports[`Helpers should produce an immutable like object: clone 1`] = `
{
  "dolor": {
    "hello": [
      "world",
      "clone",
    ],
    "sit": {
      "lorem": "ipsum",
    },
  },
  "lorem": "ipsum",
}
`;

exports[`Helpers should produce an immutable like object: delete property 1`] = `"Cannot delete property 'sit' of #<Object>"`;

exports[`Helpers should produce an immutable like object: set nested property 1`] = `"Cannot assign to read only property 'lorem' of object '#<Object>'"`;

exports[`Helpers should produce an immutable like object: set property 1`] = `"Cannot assign to read only property 'lorem' of object '#<Object>'"`;

exports[`Helpers should produce an immutable like object: shallow clone 1`] = `"Cannot add property 1, object is not extensible"`;

exports[`Helpers should produce an immutable like object: update nested property list 1`] = `"Cannot add property 1, object is not extensible"`;

exports[`Helpers should produce an immutable like object: update nested property list length 1`] = `"Cannot assign to read only property 'length' of object '[object Array]'"`;

exports[`Helpers should produce an immutable like object: update nested property list values 1`] = `"Cannot delete property '0' of [object Array]"`;

exports[`Helpers should support generated consistent hashes from objects, primitive values: hash, object and primitive values 1`] = `
{
  "valueArray": "41d49497cb062fec8dd0a1e9298650aeb2364f35",
  "valueArrayConfirmSort": true,
  "valueArraySort": "8ff5ed8b5abfb2aaa702bc720b1ed011b5074792",
  "valueBoolFalse": "fd585f7ce09952f9c9500adddf8ec1cc18f32504",
  "valueBoolTrue": "05d56a2be446d1c4bdb97dcc2c93f351a5212f6e",
  "valueFloat": "3c1c6df0b9a0750c02d03f0129c0ce0f6f2df2c1",
  "valueFunctionConfirm": true,
  "valueFunctionHelloWorld": "8daa9f7ce99a92428cfd07b81453718db32ec677",
  "valueFunctionLoremIpsum": "3e9ef0485423ff4d7b136d07b335f164c9beff62",
  "valueInt": "dc1758c52431d256e685a0adf1e87a625a228d9b",
  "valueNull": "db181a5edfc433158238dbf8deedc61083c15705",
  "valueObject": "d84105df88bfa1487a6527930629ec4d28f08984",
  "valueObjectAgain": "a2c7ddbcd87ca742253b359e658493cabcddd0d0",
  "valueObjectConfirm": true,
  "valueObjectConfirmSort": true,
  "valueObjectConfirmSortDiff": true,
  "valueSet": "217ad48afcf8b57ea5c4e0a33ca8e21d550b079f",
  "valueSetConfirmSort": true,
  "valueSetSort": "217ad48afcf8b57ea5c4e0a33ca8e21d550b079f",
  "valueSymbol": "81e08eb158c0872685b72bd659574aa746f29293",
  "valueUndefined": "0b8e7cb2b0eff19444438e445a0a252d2b9e6f9c",
}
`;

exports[`Helpers should support generated consistent hashes from objects, primitive values: method md5 1`] = `"4c54a4070554ab0addfed6c7616358c8"`;
